--- a/Segundo Filtro/styless/main.css
+++ b/Segundo Filtro/styless/main.css
@@ -31,7 +31,7 @@ body {
 .main {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   min-width: 100vh;
   gap: 10px;
   & .games-home {
@@ -39,12 +39,12 @@ body {
     padding-left: 20px;
     padding-bottom: 20px;
     padding-right: 20px;
+    border-radius: 10px;
   }
   & .home-rating {
     width: 40%;
     padding: 20px;
-    margin: 20px;
-    border-radius: 15px;
+    border-radius: 10px;
     background: var(--secondary);
   }
 }
