--- a/JavaScript/11-Navidad/css/style.css
+++ b/JavaScript/11-Navidad/css/style.css
@@ -14,6 +14,7 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   background: linear-gradient(#a2000a, #cf0000);
+  cursor: url(../img/arbol-de-navidad.png), default;
 }
 .contenedor {
   overflow: hidden;
@@ -23,15 +24,27 @@ body {
 }
 .contenedor .img {
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   width: 100vw;
+  height: 200px;
   z-index: 3;
   display: flex;
 }
 
-#imgA {
+.contenedor .img .imgA {
+  min-width: 100vw;
+  height: 100%;
+  background-image: url(../img/tree.png);
+
   animation: animacionArbol 10s linear infinite;
 }
+.contenedor .img .imgB {
+  min-width: 100vw;
+  height: 100%;
+  background-image: url(../img/tree.png);
+  animation: animacionArbol2 20s linear infinite;
+}
+
 /* .contenedor::before {
   content: "";
   position: absolute;
@@ -98,28 +111,38 @@ body {
 
 .timer {
   font-size: 52px;
-  color: #cf0000;
+  color: #fff;
   letter-spacing: 2px;
   font-weight: bold;
   position: relative;
-  margin-bottom: 10%;
+  margin-bottom: -10%;
   z-index: 4;
-  text-shadow: 2px 2px 2px #a2000a;
+  text-shadow: 2px 2px 2px #000;
+  display: flex;
+  gap: 30px;
 }
-@keyframes animacionArbol2 {
-  from {
-    transform: translate(-100%);
-  }
-  to {
-    transform: translate(100%);
-  }
+.timer .item p {
+  text-align: center;
 }
+
+.timer .item .item-text {
+  font-size: 14px;
+}
+
 @keyframes animacionArbol {
   from {
     transform: translate(100%);
   }
   to {
     transform: translate(-100%);
+  }
+}
+@keyframes animacionArbol2 {
+  from {
+    transform: translate(200%);
+  }
+  to {
+    transform: translate(-200%);
   }
 }
 
