--- a/HTML/portafolio/styles/navbar.css
+++ b/HTML/portafolio/styles/navbar.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Afacad&display=swap");
 
 :root {
-  --primary: #2d2d2a;
-  --secondary: #353831;
-  --success: #fe2a31;
+  --primary: #e9e3e6;
+  --secondary: #b2b2b2;
+  --success: #736f72;
   --t: #38423b;
   --blue: #3f5e5a;
   --light: #d2d3d7;
@@ -14,7 +14,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Afacad", sans-serif;
-  color: var(--light);
+  color: black;
   /* outline: 1px solid red; */
 }
 
@@ -27,7 +27,7 @@ body {
 }
 
 .header {
-  background: var(--secondary);
+  background: var(--primary);
   min-width: 100vw;
   height: 60px;
   display: flex;
@@ -50,6 +50,11 @@ body {
       border-radius: 100%;
       background-size: cover;
       background-position: center;
+      transition: 1s;
+    }
+    & .img:hover {
+      transform: scale(2.5) translateY(15px);
+      border-radius: 25%;
     }
     & span {
       font-weight: bold;
@@ -80,7 +85,7 @@ body {
         height: 35px;
         font-size: 30px;
         border-radius: 100%;
-        transition: 1s;
+        transition: 0.5s;
         display: flex;
         align-items: center;
         justify-content: center;
