--- a/JavaScript/carrito-compras-template-20231218T160806Z-001/carrito-compras-template/css/custom.css
+++ b/JavaScript/carrito-compras-template-20231218T160806Z-001/carrito-compras-template/css/custom.css
@@ -36,6 +36,11 @@ header {
 ul {
   list-style: none;
 }
+
+tfoot tr td {
+  font-weight: bold;
+  font-size: 25px;
+}
 #hero {
   background-image: url(../img/hero.jpg);
   height: 350px;
