--- a/JavaScript/14-filtros automoviles/css/style.css
+++ b/JavaScript/14-filtros automoviles/css/style.css
@@ -14,7 +14,8 @@
   background-image: url(../img/bg.jpg);
   background-size: cover;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   & .container {
     width: 70%;
     padding-top: 60px;
@@ -54,4 +55,34 @@
   justify-content: center;
   gap: 10px;
   margin: 20px 0;
+}
+
+.container-card {
+  height: 50vh;
+  width: 80%;
+  overflow-y: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+  padding: 20px;
+  & .card {
+    border: none;
+    width: 250px;
+    overflow: hidden;
+    background: #00000050;
+    backdrop-filter: blur(7px);
+    height: min-content;
+    border-radius: 10px;
+    & img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+    & p {
+      color: #e3e3e3;
+      text-align: center;
+      padding: 5px 20px;
+    }
+  }
 }
