--- a/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/css/custom.css
+++ b/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/css/custom.css
@@ -10,6 +10,15 @@ h1 {
 h2 {
   font-size: 3rem;
 }
+.tittles {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 10px;
+  & button {
+    background-color: white;
+  }
+}
 h4 {
   font-size: 16px;
   font-weight: 700;
