--- a/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/css/custom.css
+++ b/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/css/custom.css
@@ -1,8 +1,15 @@
+:root {
+  --primary: #f5f3f3;
+  --light: white;
+  --second: #665af9;
+  --success: #ffb84d;
+}
+
 html {
   font-size: 62.5%;
 }
 body {
-  background-color: #f5f3f3;
+  background-color: var(--primary);
 }
 h1 {
   text-align: center;
@@ -15,8 +22,9 @@ h2 {
   align-items: center;
   justify-content: space-evenly;
   margin-top: 10px;
+  min-width: 100%;
   & button {
-    background-color: white;
+    background-color: var(--light);
   }
 }
 h4 {
@@ -25,7 +33,7 @@ h4 {
 }
 header {
   padding: 20px 0 0 0;
-  background: white;
+  background: var(--light);
   text-align: center;
 }
 @media (min-width: 750px) {
@@ -38,7 +46,7 @@ header {
   border-radius: 50%;
   padding: 5px 10px;
   text-decoration: none;
-  color: white;
+  color: var(--light);
   font-weight: bold;
 }
 
@@ -72,7 +80,7 @@ tfoot tr td {
 
   top: 100%;
   z-index: 1;
-  background-color: white;
+  background-color: var(--light);
   padding: 20px;
   min-height: 400px;
   min-width: 300px;
@@ -82,11 +90,11 @@ tfoot tr td {
   background-color: crimson;
   text-align: center;
   border-radius: 10px;
-  color: white;
+  color: var(--light);
 }
 .contenido-hero {
   margin-top: 80px;
-  color: white;
+  color: var(--light);
 }
 .contenido-hero form {
   position: relative;
@@ -134,7 +142,7 @@ tfoot tr td {
 
 .barra p {
   margin: 0;
-  color: white;
+  color: var(--light);
 }
 .icono {
   background-repeat: no-repeat;
@@ -177,7 +185,7 @@ tfoot tr td {
 .card {
   text-align: center;
   border: 1px solid #e1e1e1;
-  background: white;
+  background: var(--light);
   width: 300px;
 
   & img {
@@ -222,4 +230,20 @@ tfoot tr td {
 
 .star-gray {
   color: rgb(167, 166, 166);
+}
+
+.u-pull-right {
+  display: flex;
+  gap: 25px;
+  padding-top: 10px;
+  & i {
+    font-size: 30px;
+    color: rgb(110, 109, 109);
+  }
+}
+
+header {
+  max-height: 50px;
+  align-items: center;
+  justify-content: center;
 }
