--- a/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/css/custom.css
+++ b/JavaScript/carrito-compras-template-20231218T160806Z-001 copy/carrito-compras-template/css/custom.css
@@ -187,6 +187,7 @@ tfoot tr td {
   border: 1px solid #e1e1e1;
   background: var(--light);
   width: 300px;
+  height: 650px;
 
   & img {
     max-height: auto;
