--- a/JavaScript/riwiEco/css/style.css
+++ b/JavaScript/riwiEco/css/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
 
+:root {
+  --dark: #222;
+  --light: rgb(226, 226, 226);
+}
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +16,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #222;
+  background: var(--dark);
+  & .light {
+    background: var(--light);
+  }
 }
 
 select {
