--- a/JavaScript/20 - Consumir API/peli/css/styles.css
+++ b/JavaScript/20 - Consumir API/peli/css/styles.css
@@ -69,6 +69,30 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 20px;
+  & .card-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 700px;
+    gap: 10px;
+    background: var(--black);
+    border: 3px solid var(--secondary);
+    padding: 10px;
+    border-radius: 10px;
+    & img {
+      border-radius: 10px;
+    }
+    & .info {
+      display: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      width: 100%;
+      justify-content: space-around;
+    }
+  }
+
   & h2 {
     color: var(--fontP);
   }
@@ -80,7 +104,6 @@ body {
     border-radius: 10px;
     display: flex;
     width: 350px;
-
     flex-direction: column;
     gap: 10px;
 
