--- a/Project 2024/styles/styles.css
+++ b/Project 2024/styles/styles.css
@@ -14,27 +14,51 @@
   box-sizing: border-box;
 }
 body {
+  width: 100vw;
+  height: 100vh;
+  background: var(--primary);
   background-image: url(./img/Illustration\ 5Fondo.svg);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-size: cover;
   background-position: center;
   & nav {
+    margin-top: 5px;
+    border-radius: 15px;
+    width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 15px;
     justify-content: space-around;
-    width: 100vw;
     display: flex;
-    background: var(--primary);
+    background: var(--secondary);
     color: var(--fontW);
     & img {
       width: 50px;
+    }
+  }
+  & .container {
+    display: flex;
+    align-items: first baseline;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 20px;
+    border: 5px solid red;
+    width: 80%;
+    height: 100vh;
+    & .card {
+      width: 350px;
+      height: 60%;
+      border: 2px solid black;
+      padding: 5px;
+      background: var(--fontW);
     }
   }
 }
