--- a/JavaScript/SPACEX/styles/styles.css
+++ b/JavaScript/SPACEX/styles/styles.css
@@ -13,6 +13,18 @@ body {
   /* flex-direction: column; */
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+/* body { */
+  /* -ms-overflow-style: none;  */
+  /* IE and Edge */
+  /* scrollbar-width: none;  */
+  /* Firefox */
+/* } */
+
 .main {
   width: 100vw;
   height: 100vh;
