end class kevin

--- a/JavaScript/23 - Autenticacion/css/login.css
+++ b/JavaScript/23 - Autenticacion/css/login.css
@@ -2,4 +2,24 @@
   padding: 20px;
   border: 1px solid #222;
   border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-size: 25px;
+}
+
+.btn-primary {
+  padding: 10px 20px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 25px;
+}
+
+.btn-primary:hover {
+  filter: brightness(50%);
+}
+.btn-primar:active {
+  background-color: #3e8e41;
 }
